# schulmanager-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: discovered-endpoints.md
src/schulmanager_api/: config.py  dependencies.py  main.py
src/schulmanager_api/models/: schemas.py
src/schulmanager_api/providers/: base.py  factory.py  mock.py  selenium.py
src/schulmanager_api/routers/: auth.py  cache.py  health.py  metrics.py  students.py  sync.py  webhooks.py
src/schulmanager_api/services/: auth_store.py  cache.py  event_service.py  grade_stats.py  ical.py  logging_config.py  metrics_store.py  rate_limiter.py  security.py  sqlite_cache.py  webhooks.py
tests/: conftest.py  test_api_smoke.py  test_improvements.py  test_new_endpoints.py  test_provider_parsing.py
tools/: capture-api.js
